tests/snapshots/snapshot_tests__error_namespace_not_found.snap
---
source: tests/snapshot_tests.rs
expression: err.to_string()
---
Namespace 'nonexistent' not found
