tests/snapshots/snapshot_tests__error_relation_not_found.snap
---
source: tests/snapshot_tests.rs
expression: err.to_string()
---
relation 'nonexistent' not found in namespace 'doc'
