tests/snapshots/snapshot_tests__expand_exclusion_banned.snap
---
source: tests/snapshot_tests.rs
expression: expanded
---
Exclusion {
    base: Union(
        [
            User(
                "alice",
            ),
            User(
                "bob",
            ),
        ],
    ),
    exclude: Union(
        [
            User(
                "bob",
            ),
        ],
    ),
}
