tests/snapshots/snapshot_tests__expand_intersection.snap
---
source: tests/snapshot_tests.rs
expression: expanded
---
Intersection(
    [
        Union(
            [
                User(
                    "alice",
                ),
            ],
        ),
        Union(
            [
                User(
                    "alice",
                ),
                User(
                    "bob",
                ),
            ],
        ),
    ],
)
