tests/snapshots/snapshot_tests__expand_owner_direct.snap
---
source: tests/snapshot_tests.rs
expression: expanded
---
Union(
    [
        User(
            "alice",
        ),
    ],
)
