tests/snapshots/snapshot_tests__expand_viewer_union_hierarchy.snap
---
source: tests/snapshot_tests.rs
expression: expanded
---
Union(
    [
        Union(
            [
                User(
                    "charlie",
                ),
            ],
        ),
        Union(
            [
                User(
                    "alice",
                ),
            ],
        ),
        Union(
            [
                User(
                    "bob",
                ),
            ],
        ),
        Union(
            [
                Union(
                    [
                        User(
                            "dave",
                        ),
                    ],
                ),
            ],
        ),
    ],
)
