tests/snapshots/snapshot_tests__parse_exclusion_with_nested_union.snap
---
source: tests/snapshot_tests.rs
expression: "&viewer.userset_rewrite"
---
Some(
    Exclusion {
        base: Union(
            [
                This,
                ComputedUserset {
                    relation: Relation(
                        "owner",
                    ),
                },
                ComputedUserset {
                    relation: Relation(
                        "editor",
                    ),
                },
            ],
        ),
        exclude: ComputedUserset {
            relation: Relation(
                "banned",
            ),
        },
    },
)
