tests/snapshots/snapshot_tests__parse_tuple_to_userset.snap
---
source: tests/snapshot_tests.rs
expression: "&viewer.userset_rewrite"
---
Some(
    TupleToUserset {
        tupleset_relation: Relation(
            "parent",
        ),
        computed_userset_relation: Relation(
            "viewer",
        ),
    },
)
